manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: doc-to-pdf-service
spec:
  type: LoadBalancer
  selector:
    app: doc-to-pdf
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
